@@ -3016,6 +3016,21 @@ sub _is_perfect_square {
   0;
 }
 
+sub is_primitive_root {
+  my($a, $n) = @_;
+  $n = -$n if $n < 0;   # ignore sign
+  my $s = Math::Prime::Util::euler_phi($n);
+  return 0 if Math::Prime::Util::gcd($a, $n) != 1;
+  return 0 if ($s % 2) == 0 && Math::Prime::Util::powmod($a, $s/2, $n) == 1;
+  return 0 if ($s % 3) == 0 && Math::Prime::Util::powmod($a, $s/3, $n) == 1;
+  return 0 if ($s % 5) == 0 && Math::Prime::Util::powmod($a, $s/5, $n) == 1;
+  foreach my $f (Math::Prime::Util::factor_exp($s)) {
+    my $fp = $f->[0];
+    return 0 if $fp > 5 && Math::Prime::Util::powmod($a, $s/$fp, $n) == 1;
+  }
+  1;
+}
+
 sub znorder {
   my($a, $n) = @_;
   return if $n <= 0;
